autometrics-macros/tests/error_labels/fail/wrong_variant.stderr
error: Only "ok" or "error" are accepted as result values
  --> tests/error_labels/fail/wrong_variant.rs:12:22
   |
12 |     #[label(result = "not ok")]
   |                      ^^^^^^^^
